--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --write \"handlers/**/*.js\"",
+    "prettier": "prettier --write \"lib/**/*.js\"",
     "deploy": "serverless deploy -v"
   },
   "repository": {
