--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "dependencies": {
     "aws-sdk": "^2.596.0",
     "serverless": "^1.60.4",
+    "serverless-dynamodb-local": "^0.2.38",
     "telegraf": "^3.34.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "axios": "^0.19.0",
+    "prettier": "^1.19.1",
+    "serverless-offline": "^5.12.1"
   }
 }
