--- a/serverless.yml
+++ b/serverless.yml
@@ -66,7 +66,7 @@ custom:
             sources: [./data/courses.json]
 
 # remove _ when running offline
-resources:
+_resources:
   Resources:
     usersTable:
       Type: AWS::DynamoDB::Table
