--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "homepage": "https://github.com/tonguebender/tonguebedner-lambdas#readme",
   "dependencies": {
+    "@types/aws-lambda": "^8.10.39",
     "aws-sdk": "^2.596.0",
     "serverless": "^1.60.4",
     "serverless-dynamodb-local": "^0.2.38",
@@ -26,6 +27,8 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "prettier": "^1.19.1",
-    "serverless-offline": "^5.12.1"
+    "serverless-offline": "^5.12.1",
+    "serverless-plugin-typescript": "^1.1.9",
+    "typescript": "^3.7.4"
   }
 }
